<resources>
    <string name="app_name">InverseTechnobelka</string>
    <string name="text_forgot_password">Если вы забыли пароль, обратитесь к администратору</string>
    <string name="text_login">Вход</string>
    <string name="text_school_800">ШКОЛА 800</string>
    <string name="text_by_inverse">by Inverse</string>
    <string name="text_to_login">Войти</string>
    <string name="text_to_add">Добавить</string>
    <string name="text_to_select">Выбрать</string>
    <string name="text_to_next">Далее</string>
    <string name="text_random">Сгенерировать</string>
    <string name="text_select_sam">Выбрать самому</string>
    <string name="text_person_login">Логин</string>
    <string name="text_password">Пароль</string>
    <string name="text_error_login">Неправильный номер или пароль</string>
    <string name="text_select_faculty">Выберите факультет</string>
    <string name="text_your_faculty">Ваш факультет</string>
    <string name="text_cannot_be_changed">Это решение нельзя изменить</string>
    <string name="text_about_faculty">О факультете</string>
    <string name="text_our_values">Наши ценности</string>
    <string name="text_home">Главная</string>
    <string name="text_rating">Рейтинг</string>
    <string name="text_tasks">Задачи</string>
    <string name="text_events">События</string>
    <string name="text_profile">Профиль</string>
    <string name="text_my_events">Мои события</string>
    <string name="text_my_achievements">Мои достижения</string>
    <string name="text_events_title">Мероприятия</string>
    <string name="text_go_to_events">Перейти к мероприятию</string>
    <string name="text_i_will_go">Я пойду</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_statics">Статистика</string>
    <string name="text_faculties">Факультеты</string>
    <string name="text_personal">Личный</string>
    <string name="text_place_in_rating">Место в рейтинге</string>
    <string name="text_to_execution">Приступить к выполнению</string>
</resources>