<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.LoginFragment"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_login"
                android:textColor="@color/color_text_title"
                android:fontFamily="@font/gramatika_bold"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_school_800"
                android:textColor="@color/color_text_title"
                android:textSize="24sp"
                android:fontFamily="@font/gramatika_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/color_text_description"
            app:counterTextColor="@color/color_text_description"
            app:cursorColor="@color/text_color_edit_text"
            app:hintEnabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:minHeight="60dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/text_person_login"
                android:textColorHint="@color/color_text_description"
                android:textSize="16sp"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/cursor_style_edit_text"
                android:textColor="@color/text_color_edit_text"
                android:inputType="textPersonName"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/color_text_description"
            app:counterTextColor="@color/color_text_description"
            app:cursorColor="@color/text_color_edit_text"
            app:hintEnabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:minHeight="60dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/text_password"
                android:textColorHint="@color/color_text_description"
                android:textSize="15sp"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/cursor_style_edit_text"
                android:textColor="@color/text_color_edit_text"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_error_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_error_login"
            android:textColor="@color/color_error"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_block_button"
                android:paddingVertical="21dp"
                android:text="@string/text_to_login"
                android:includeFontPadding="false"
                android:paddingHorizontal="31dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="100dp"
                android:lineSpacingExtra="4sp"
                android:enabled="false" />

            <ProgressBar
                android:id="@+id/progress_login"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:indeterminateTint="@color/color_background_button"
                android:visibility="invisible"
                tools:visibility="visible"/>

    </FrameLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="38dp"
        android:gravity="center"
        android:lineSpacingExtra="4sp"
        android:text="@string/text_forgot_password"
        android:textColor="@color/color_text_description"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>